# dpul-collections

./: .gitignore  .lando.yml  .tool-versions  Cargo.toml  Dockerfile  README.md  STYLE_GUIDE.md  compose.yml  coveralls.json  devbox.json  devenv.nix  devenv.yaml  mix.exs  ocr-viewer.html  package-lock.json  package.json  process-compose.yaml  renovate.json
.circleci/: config.yml
.github/: dependabot.yml  failed-vuln-check.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: build-docker-image.yml  clean-images.yml  nightly-vuln-scanning.yml
architecture-decisions/: 0001-document-architecture-decisions.md  0002-indexing.md  0003-one-indexer.md  0004-deleting-records.md  0005-oban.md
assets/: package-lock.json  package.json  tailwind.config.js  tailwind_heroicons.js  vite.config.mjs
assets/css/: app.css  clover.css  fonts.css  icons.css  mirador.css  triiiceratops-themes.css
assets/js/: app.js  download_button.jsx  download_icon.jsx  dpulc_viewer.js  dpulc_viewer.jsx  hooks.js  loader.jsx  server.js
assets/public/: robots.txt
assets/svelte/: DpulcViewer.svelte
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
config/deploy/: grafana.hcl  log-shipping.hcl  loki.hcl  production.hcl  prometheus.hcl  staging.hcl
design-decisions/: 0001-filters.md
docker/: Dockerfile
docs/: audience.md  goals.md  success_metrics.md
docs/admin/: clean_index.md
docs/indexing_pipeline/: producer.md
docs/locale/: adding_translations.md
figgy-fixture-container/: Dockerfile  build-and-push.sh  create-fixture-exports.sh  create-synthetic-fixtures.sh  import-container-fixtures.sh
figgy-fixture-container/fixture-exports/: db-schema.sql  extras-export.binary  extras-members-export.binary  extras-parents-export.binary  project-dm-export.binary  project-export.binary  project-ignore-export.binary  project-ignore2-export.binary  project-members-export.binary  project-vocabulary-export.binary
fixture-container/: .gitignore  Dockerfile  Gemfile  README.md  cached-collection-manifest.json  generate-fixtures
lib/: dpul_collections.ex  dpul_collections_web.ex  restore_locale.ex
lib/dpul_collections/: accounts.ex  application.ex  classifier.ex  collection.ex  correction.ex  figgy_notifier.ex  figgy_repo.ex  greeter.ex  iiif.ex  image_search.ex  index_metrics_tracker.ex  index_validator.ex  indexing_pipeline.ex  iso639.ex  item.ex  libanswers_api.ex  mailer.ex  mcp_server.ex  open_telemetry_ecto.ex  prom_ex.ex  release.ex  repo.ex  schema.ex  search_result.ex  searcher.ex  solr.ex  transcription.ex  translator.ex  user_sets.ex  utilities.ex
lib/dpul_collections_web/: cldr.ex  content_warnings.ex  current_path_hook.ex  endpoint.ex  fallback.ex  gettext.ex  live_hooks.ex  mosaic_images.ex  router.ex  router_helpers.ex  set_locale_hook.ex  solr_sandbox_plug.ex  telemetry.ex  user_auth.ex
lib/embed_anything/: embed_anything.ex
native/embedanything/: Cargo.toml  README.md
native/embedanything/src/: lib.rs
priv/: iso_639-2.json
rel/: env.sh.eex  remote.vm.args.eex  vm.args.eex
test/: test_helper.exs
text-embeddings/: Dockerfile
(+311 files in other folders)
