[package]
name = "embedanything"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "embedanything"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
once_cell = "1.21.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
text-embeddings-backend = { git = "https://github.com/huggingface/text-embeddings-inference.git", version = "1.7.2" , features = ["candle"]}
text-embeddings-backend-core = { git = "https://github.com/huggingface/text-embeddings-inference.git", version = "1.7.2" }
text-embeddings-backend-candle = { git = "https://github.com/huggingface/text-embeddings-inference.git", version = "1.7.2" }
text-embeddings-core = { git = "https://github.com/huggingface/text-embeddings-inference.git", version = "1.7.2" }
hf-hub = "0.4.3"
tokenizers = "0.21.2"
anyhow = "1.0.98"
futures = "0.3.31"
